--- a/index.html
+++ b/index.html
@@ -69,12 +69,12 @@
         <div class="subheading mb-5">3542 Berry Street · Cheyenne Wells, CO 80810 · (317) 585-8468 ·
           <a href="mailto:name@email.com">silvery0224@naver.com</a>
         </div>
-        <p class="lead mb-5">I am experienced in leveraging agile frameworks to provide a robust synopsis for high level overviews. Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition.</p>
+        <p class="lead mb-5">I am interested in programming and enjoying it. Trust me!</p>
         <div class="social-icons">
           <a href="#">
             <i class="fab fa-linkedin-in"></i>
           </a>
-          <a href="#">
+          <a href="https://github.eunsung-git" target="_blank">
             <i class="fab fa-github"></i>
           </a>
           <a href="#">
