--- a/index.html
+++ b/index.html
@@ -149,9 +149,9 @@
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
-            <h3 class="mb-0">University of Colorado Boulder</h3>
-            <div class="subheading mb-3">Bachelor of Science</div>
-            <div>Computer Science - Web Development Track</div>
+            <h3 class="mb-0">KyungHee University</h3>
+            <div class="subheading mb-3">College of Foreign Language & literature</div>
+            <div>School of Global Communication - Department of British-American Language & Literature</div>
             <p>GPA: 3.23</p>
           </div>
           <div class="resume-date text-md-right">
