Update education & certification

--- a/index.html
+++ b/index.html
@@ -152,21 +152,20 @@
             <h3 class="mb-0">KyungHee University</h3>
             <div class="subheading mb-3">College of Foreign Language & literature</div>
             <div>School of Global Communication - Department of British-American Language & Literature</div>
-            <p>GPA: 3.23</p>
+            <p>GPA: 3.38</p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">August 2006 - May 2010</span>
+            <span class="text-primary">March 2014 - February 2020</span>
           </div>
         </div>
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between">
           <div class="resume-content">
-            <h3 class="mb-0">James Buchanan High School</h3>
-            <div class="subheading mb-3">Technology Magnet Program</div>
-            <p>GPA: 3.56</p>
+            <h3 class="mb-0">Gyeonggi Academy of Foreign Lnaguage</h3>
+            <div class="subheading mb-3">Department of Japanese</div>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">August 2002 - May 2006</span>
+            <span class="text-primary">March 2011 - February 2014</span>
           </div>
         </div>
 
@@ -240,7 +239,7 @@
         <ul class="fa-ul mb-0">
           <li>
             <i class="fa-li fa fa-trophy text-warning"></i>
-            Google Analytics Certified Developer</li>
+            ADsP(데이터분석준전문가)</li>
           <li>
             <i class="fa-li fa fa-trophy text-warning"></i>
             Mobile Web Specialist - Google Certification</li>
